--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,13 @@ body{
   left: 20px !important;
   z-index: 3 !important;
 }
+@media (min-width:768px){
+  .slick-arrow.slick-next{
+    /* display: none !important; */
+    right: 50px !important;
+  }
+  .slick-arrow.slick-prev{
+    left: 50px !important;
+    z-index: 3 !important;
+  }
+}
