--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,22 @@ body{
     z-index: 3 !important;
   }
 }
+
+
+.scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+.scroll::-webkit-scrollbar-track {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+/* Handle */
+.scroll::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: rgb(99 102 241); 
+}
+
